<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cn.maxpixel.minecraft-decompiler</groupId>
    <artifactId>parent</artifactId>
    <version>4.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>MinecraftDecompiler - Parent</name>
    <inceptionYear>2019</inceptionYear>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <depend.asm.ver>9.6</depend.asm.ver>
        <depend.gson.ver>2.10.1</depend.gson.ver>
        <depend.fastutil.ver>8.5.12</depend.fastutil.ver>
        <depend.jopt.ver>6.0-alpha-3</depend.jopt.ver>
        <depend.cfr.ver>0.152</depend.cfr.ver>
        <depend.fernflower.ver>243.22562.218</depend.fernflower.ver>
        <depend.forgeflower.ver>2.0.674.3</depend.forgeflower.ver>
        <depend.vineflower.ver>1.11.1</depend.vineflower.ver>
        <depend.jbannos.ver>24.0.1</depend.jbannos.ver>
        <depend.jmh.ver>1.37</depend.jmh.ver>
        <depend.rewh.ver>0.1</depend.rewh.ver>
    </properties>
    <licenses>
        <license>
            <name>LGPLv3</name>
            <distribution>repo</distribution>
            <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
        </license>
        <license>
            <name>GPLv3</name>
            <distribution>repo</distribution>
            <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
        </license>
    </licenses>
    <organization>
        <name>MaxPixel Studios</name>
        <url>https://github.com/MaxPixelStudios</url>
    </organization>
    <modules>
        <module>modules/cli</module>
        <module>modules/decompiler</module>
        <module>modules/mapping-api</module>
        <module>modules/remapper</module>
        <module>modules/mapping-format-detector</module>
        <module>modules/app-common</module>
        <module>modules/api</module>
        <module>extensions</module>
        <module>modules/utils</module>
    </modules>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.6.0</version>
                    <configuration>
                        <createDependencyReducedPom>false</createDependencyReducedPom>
                    </configuration>
                    <executions>
                        <execution>
                            <id>shade</id>
                            <goals><goal>shade</goal></goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                    <executions>
                        <execution>
                            <id>create-sources</id>
                            <goals><goal>jar-no-fork</goal></goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.11.2</version>
                    <executions>
                        <execution>
                            <id>create-javadoc</id>
                            <goals><goal>jar</goal></goals>
                        </execution>
                    </executions>
                    <configuration>
                        <locale>en_US</locale>
                        <tags>
                            <tag>
                                <name>apiNote</name>
                                <placement>a</placement>
                                <head>API Note:</head>
                            </tag>
                            <tag>
                                <name>implSpec</name>
                                <placement>a</placement>
                                <head>Implementation Requirements:</head>
                            </tag>
                            <tag>
                                <name>implNote</name>
                                <placement>a</placement>
                                <head>Implementation Note:</head>
                            </tag>
                        </tags>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <repositories>
        <repository>
            <id>forge-maven</id>
            <url>https://maven.minecraftforge.net/</url>
        </repository>
        <repository>
            <id>jetbrains</id>
            <url>https://www.jetbrains.com/intellij-repository/releases</url>
        </repository>
        <repository>
            <id>rewh-github</id>
            <url>https://maven.pkg.github.com/MaxPixelStudios/ReinventedWheels</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${depend.asm.ver}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-commons</artifactId>
                <version>${depend.asm.ver}</version>
<!--                <exclusions>-->
<!--                    <exclusion>-->
<!--                        <groupId>org.ow2.asm</groupId>-->
<!--                        <artifactId>asm-tree</artifactId>-->
<!--                    </exclusion>-->
<!--                </exclusions>-->
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${depend.gson.ver}</version>
            </dependency>
            <dependency>
                <groupId>it.unimi.dsi</groupId>
                <artifactId>fastutil</artifactId>
                <version>${depend.fastutil.ver}</version>
            </dependency>
            <dependency>
                <groupId>net.sf.jopt-simple</groupId>
                <artifactId>jopt-simple</artifactId>
                <version>${depend.jopt.ver}</version>
            </dependency>
            <dependency>
                <groupId>cn.maxpixel.rewh.logging</groupId>
                <artifactId>logging-core</artifactId>
                <version>${depend.rewh.ver}</version>
            </dependency>
            <dependency>
                <groupId>org.benf</groupId>
                <artifactId>cfr</artifactId>
                <version>${depend.cfr.ver}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.jetbrains.intellij.java</groupId>
                <artifactId>java-decompiler-engine</artifactId>
                <version>${depend.fernflower.ver}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>net.minecraftforge</groupId>
                <artifactId>forgeflower</artifactId>
                <version>${depend.forgeflower.ver}</version>
                <scope>provided</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.jetbrains</groupId>
                        <artifactId>annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.vineflower</groupId>
                <artifactId>vineflower</artifactId>
                <version>${depend.vineflower.ver}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${depend.jbannos.ver}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>${depend.jmh.ver}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <version>${depend.jmh.ver}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.10.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <distributionManagement>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/MaxPixelStudios/MinecraftDecompiler</url>
        </repository>
    </distributionManagement>
</project>